added to do list and filters to the home page, also added custom logo placeholders based on the filter selected, also added swipe to delete to the host page
